--- a/c_sharp_calculator/Calculator/wwwroot/css/site.css
+++ b/c_sharp_calculator/Calculator/wwwroot/css/site.css
@@ -103,7 +103,7 @@ Calculator styling
 .button-container {
   display: flex;
   flex-direction: column;
-  height: 230px;
+  height: 290px;
   justify-content: space-between;
   width: 500px;
   align-items: center;
@@ -111,8 +111,14 @@ Calculator styling
 
 .button-container-row {
   display: flex;
-  width: 170px;
+  width: 230px;
   justify-content: space-between;
+}
+
+.button-container-row-single {
+  display: flex;
+  width: 230px;
+  justify-content: flex-end;
 }
 
 .digit-button {
