--- a/c_sharp_calculator/Calculator/Pages/Display.razor
+++ b/c_sharp_calculator/Calculator/Pages/Display.razor
@@ -1,8 +1,8 @@
 <div class="card calculation-card">
-    <div class="card-header calculation-card-header">
+    <div id="calculation" class="card-header calculation-card-header">
         @GetCalculation()
     </div>
-    <div class="card-body calculation-card-text">
+    <div id="result" class="card-body calculation-card-text">
         @Calculate(@currentCalculation)
     </div>
 </div>
