--- a/c_sharp_calculator/Calculator/Pages/Display.razor
+++ b/c_sharp_calculator/Calculator/Pages/Display.razor
@@ -1,9 +1,9 @@
 <div class="card calculation-card">
     <div id="calculation" class="card-header calculation-card-header">
-        @GetCalculation()
+        @GetDisplayedCalculation()
     </div>
     <div id="result" class="card-body calculation-card-text">
-        @Calculate(@currentCalculation)
+        @Calculate()
     </div>
 </div>
 
@@ -11,21 +11,31 @@
     [Parameter]
     public List<string> currentCalculation { get; set; }
 
-    private string GetCalculation() { return string.Join("", currentCalculation).Trim(); }
+    private string GetDisplayedCalculation() { 
+        var stringedCalculation = string.Join("", currentCalculation).Trim();
+        Console.WriteLine(stringedCalculation);
 
-    public decimal Calculate(List<string> calculation)
+        if (IsADecimal(currentCalculation))
+        {
+            return "";
+        }
+    
+        return stringedCalculation;
+    }
+
+    public string Calculate()
     {
-        if (calculation.Count == 0)
+        if (currentCalculation.Count == 0)
         {
-            return 0;
+            return "0";
         }
 
-        if (IsADecimal(calculation))
+        if (IsADecimal(currentCalculation))
         {
-            return Convert.ToDecimal(string.Join("", calculation));
+            return string.Join("", currentCalculation).Trim();
         }
 
-        List<string> chunks = GetCalculationChunks(calculation);
+        List<string> chunks = GetCalculationChunks(currentCalculation);
 
         decimal runningTotal = 0;
         string activeOperator = null;
@@ -61,7 +71,7 @@
             }
         }
 
-        return runningTotal;
+        return runningTotal.ToString();
     }
 
     private List<string> GetCalculationChunks(List<string> calculation)
@@ -86,9 +96,9 @@
         return chunks;
     }
 
-    private bool IsADecimal(List<string> current)
+    private bool IsADecimal(List<string> calculation)
     {
-        return current
+        return calculation
         .Distinct()
         .Except(new List<string> { "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ".", "-" })
         .Count() == 0;
