get tests passing

--- a/c_sharp_calculator/Calculator/Pages/CalculatorPage.razor
+++ b/c_sharp_calculator/Calculator/Pages/CalculatorPage.razor
@@ -7,7 +7,7 @@
 
 @code {
     private List<string> currentCalculation = new List<string>();
-    private List<string> operators = new List<string> { "+", "-", "x", "÷" };
+    private List<string> operators = new List<string> { "+", "-", "x", "÷", "=" };
 
     private void updateCurrentCalculation(Button button)
     {
@@ -43,6 +43,7 @@
             if (currentCalculation.Count == 0)
             {
                 currentCalculation.AddRange(new List<string> { "0", button.DisplayText });
+                return;
             }
             else if (operators.Contains(currentCalculation[currentCalculation.Count - 1]))
             {
