--- a/c_sharp_calculator/Calculator/Pages/Display.razor
+++ b/c_sharp_calculator/Calculator/Pages/Display.razor
@@ -3,13 +3,17 @@
         @GetDisplayedCalculation()
     </div>
     <div id="result" class="card-body calculation-card-text">
-        @Calculate()
+        @result
     </div>
 </div>
 
 @code {
     [Parameter]
     public List<string> currentCalculation { get; set; }
+
+    [Parameter]
+    public string result { get; set; }
+
     private List<string> operators = new List<string> { "+", "-", "x", "÷", "=" };
 
     private string GetDisplayedCalculation()
@@ -60,79 +64,6 @@
         }
 
         return formatted.ToString();
-    }
-
-    public string Calculate()
-    {
-        if (currentCalculation.Count == 0)
-        {
-            return "0";
-        }
-
-        if (IsADecimal(currentCalculation))
-        {
-            return string.Join("", currentCalculation).Trim();
-        }
-
-        List<string> chunks = GetCalculationChunks(currentCalculation);
-
-        decimal runningTotal = 0;
-        string activeOperator = null;
-        for (int i = 0; i < chunks.Count; i++)
-        {
-            var isDecimal = Decimal.TryParse(chunks[i], out var chunk);
-
-            if (isDecimal && activeOperator == null)
-            {
-                runningTotal = chunk;
-            }
-            else if (isDecimal && activeOperator != null)
-            {
-                switch (activeOperator)
-                {
-                    case "+":
-                        runningTotal += chunk;
-                        break;
-                    case "-":
-                        runningTotal -= chunk;
-                        break;
-                    case "x":
-                        runningTotal *= chunk;
-                        break;
-                    case "÷":
-                        runningTotal /= chunk;
-                        break;
-                }
-            }
-            else
-            {
-                activeOperator = chunks[i];
-            }
-        }
-
-        return runningTotal.ToString();
-    }
-
-    private List<string> GetCalculationChunks(List<string> calculation)
-    {
-        StringBuilder activeChunk = new StringBuilder();
-        List<string> chunks = new List<string>();
-
-        for (int i = 0; i < calculation.Count; i++)
-        {
-            if (IsADecimal(new List<string> { calculation[i] }))
-            {
-                activeChunk.Append(calculation[i]);
-            }
-            else
-            {
-                chunks.Add(activeChunk.ToString());
-                activeChunk.Clear();
-                chunks.Add(calculation[i]);
-            }
-        }
-
-        return chunks;
     }
 
     private bool IsADecimal(List<string> calculation)
